--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
+		
+                <dependency>
+   			<groupId>org.sonarsource.scanner.maven</groupId>
+    			<artifactId>sonar-maven-plugin</artifactId>
+    			<version>3.10.0.2594</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
