--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+            			<groupId>org.sonarsource.scanner.maven</groupId>
+            			<artifactId>sonar-maven-plugin</artifactId>
+            			<version>3.10.1.1854</version> <!-- Use the latest version -->
+        		</plugin>
 		</plugins>
 	</build>
 
