--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 		<jacoco.version>0.8.8</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>D:\Somil\Workspace\Projects\Phone-Book\target\jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.jacoco.reportPath>
+			D:\Somil\Workspace\Projects\Phone-Book\target\jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
 
 	</properties>
@@ -114,21 +115,71 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.8</version>
+				<version>0.7.5.201505241946</version>
+				<configuration>
+					<excludes>
+						<exclude>org/company/*</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
+						<id>default-prepare-agent</id>
+						<phase>initialize</phase>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>report</id>
-						<phase>prepare-package</phase>
+						<id>default-check</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule
+									implementation="org.jacoco.maven.RuleConfiguration">
+									<element>BUNDLE</element>
+									<limits>
+										<limit
+											implementation="org.jacoco.report.check.Limit">
+											<counter>INSTRUCTION</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.0</minimum>
+										</limit>
+										<limit
+											implementation="org.jacoco.report.check.Limit">
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.0</minimum>
+										</limit>
+										<limit
+											implementation="org.jacoco.report.check.Limit">
+											<counter>CLASS</counter>
+											<value>MISSEDCOUNT</value>
+											<maximum>1000</maximum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>verify</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${argLine} -XX:PermSize=256m -XX:MaxPermSize=1048m</argLine>
+				</configuration>
 			</plugin>
 
 			<plugin>
