--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<jacoco.version>0.8.8</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>D:\Somil\Workspace\Projects\Phone-Book\target\jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.jacoco.reportPath>target/site/jacoco.xml</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
 
 	</properties>
