--- a/DeploymentService.yaml
+++ b/DeploymentService.yaml
@@ -24,6 +24,8 @@ apiVersion: v1
 metadata:
   name: devops-service
 spec:
+  externalIPs:
+    - 192.168.49.2
   selector:
     app: devops
   ports:
